# byebyecode

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_88CODE_API.md  README_BYEBYECODE.md  README_BYEBYECODE_TUTORIAL.md  REFRESH_ANALYSIS.md  test_cli.js
.github/workflows/: release.yml
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js
npm/scripts/: prepare-packages.js
src/: cli.rs  lib.rs  main.rs  updater.rs
src/api/: cache.rs  client.rs  mod.rs
src/auto_config/: claude_settings.rs  mod.rs
src/config/: loader.rs  models.rs  types.rs
src/core/: statusline.rs
src/core/segments/: byebyecode_status.rs  byebyecode_subscription.rs  byebyecode_usage.rs  mod.rs  usage.rs
src/translation/: glm.rs  mod.rs
src/ui/: app.rs
src/ui/components/: preview.rs  segment_list.rs  settings.rs
src/ui/themes/: presets.rs  theme_cometix.rs  theme_default.rs  theme_gruvbox.rs  theme_minimal.rs  theme_nord.rs  theme_powerline_dark.rs  theme_powerline_light.rs  theme_powerline_rose_pine.rs  theme_powerline_tokyo_night.rs
src/utils/: claude_code_patcher.rs
src/wrapper/: injector.rs  io_interceptor.rs  mod.rs
