[package]
name = "byebyecode"
version = "0.1.0"
edition = "2021"
description = "byebyecode - Claude Code Wrapper with Translation, Usage Tracking and Enhanced Features"
authors = ["byebyecode Team"]
license = "MIT"
repository = "https://github.com/byebyecode/byebyecode"
readme = "README.md"
keywords = ["claude", "statusline", "translation", "byebyecode", "claude-code"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "byebyecode"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

ansi_term = { version = "0.12", optional = true }
ansi-to-tui = { version = "7.0", optional = true }

ureq = { version = "2.10", features = ["json"], optional = true }
semver = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
dirs = { version = "5.0", optional = true }
regex = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.21"
which = "6.0"

[features]
default = ["tui", "self-update", "dirs"]
tui = ["ratatui", "crossterm", "ansi_term", "ansi-to-tui", "chrono"]
self-update = ["ureq", "semver", "chrono", "dirs"]
